Add more color/value examples.

--- a/example/index.html
+++ b/example/index.html
@@ -20,7 +20,19 @@
         <aside class="page__sidebar">
 
           <div class="gauge">
-            <div class="gauge__meter"></div>
+            <div class="gauge__meter gauge__meter--10"></div>
+          </div>
+
+          <div class="gauge">
+            <div class="gauge__meter gauge__meter--25"></div>
+          </div>
+
+          <div class="gauge">
+            <div class="gauge__meter gauge__meter--50"></div>
+          </div>
+
+          <div class="gauge">
+            <div class="gauge__meter gauge__meter--75"></div>
           </div>
 
         </aside>
