--- a/example/index.html
+++ b/example/index.html
@@ -20,15 +20,19 @@
         <aside class="page__sidebar">
 
           <div class="gauge">
-            <div class="gauge__meter gauge__meter--10"></div>
+            <div class="gauge__meter gauge__meter--5"></div>
           </div>
 
           <div class="gauge">
-            <div class="gauge__meter gauge__meter--25"></div>
+            <div class="gauge__meter gauge__meter--15"></div>
           </div>
 
           <div class="gauge">
-            <div class="gauge__meter gauge__meter--50"></div>
+            <div class="gauge__meter gauge__meter--30"></div>
+          </div>
+
+          <div class="gauge">
+            <div class="gauge__meter gauge__meter--60"></div>
           </div>
 
           <div class="gauge">
