Styling for gauge lists.

--- a/example/index.html
+++ b/example/index.html
@@ -9,7 +9,7 @@
 
   <link href="https://correctiv.org/static/img/favicon.png" rel="shortcut icon">
   <link href="https://correctiv.org/static/CACHE/css/cc349daafa44.css" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="../css/main.css">
+  <link rel="stylesheet" href="/dist/css/main.css">
 </head>
 
 <body>
@@ -17,33 +17,93 @@
     <div class="page__container">
       <div class="page__row">
 
+        <section class="page__section">
+
+          <ul class="gauge-list">
+
+            <li class="gauge-item">
+              <div class="gauge-item__thumbnail--inline">
+                <div class="gauge">
+                  <div class="gauge__meter gauge__meter--5"></div>
+                </div>
+              </div>
+
+              <h3 class="gauge-item__title">Lorem Ipsum dolor sit amet</h3>
+              <p class="gauge-item__description">
+                Status: <strong class="gauge-item__status">Lorem Ipsum dolor</strong></p>
+            </li>
+
+            <li class="gauge-item">
+              <div class="gauge-item__thumbnail--inline">
+                <div class="gauge">
+                  <div class="gauge__meter gauge__meter--15"></div>
+                </div>
+              </div>
+
+              <h3 class="gauge-item__title">Lorem Ipsum dolor sit amet</h3>
+              <p class="gauge-item__description">
+                Status: <strong class="gauge-item__status--15">Lorem Ipsum dolor</strong>
+              </p>
+            </li>
+
+            <li class="gauge-item">
+              <div class="gauge-item__thumbnail--inline">
+                <div class="gauge">
+                  <div class="gauge__meter gauge__meter--30"></div>
+                </div>
+              </div>
+
+              <h3 class="gauge-item__title">Lorem Ipsum dolor sit amet</h3>
+              <p class="gauge-item__description">
+                Status: <strong class="gauge-item__status--30">Lorem Ipsum dolor</strong>
+              </p>
+            </li>
+
+            <li class="gauge-item">
+              <div class="gauge-item__thumbnail--inline">
+                <div class="gauge">
+                  <div class="gauge__meter gauge__meter--60"></div>
+                </div>
+              </div>
+
+              <h3 class="gauge-item__title">Lorem Ipsum dolor sit amet</h3>
+              <p class="gauge-item__description">
+                Status: <strong class="gauge-item__status--60">Lorem Ipsum dolor</strong>
+              </p>
+            </li>
+
+            <li class="gauge-item">
+              <div class="gauge-item__thumbnail--inline">
+                <div class="gauge">
+                  <div class="gauge__meter gauge__meter--75"></div>
+                </div>
+              </div>
+
+              <h3 class="gauge-item__title">Lorem Ipsum dolor sit amet</h3>
+              <p class="gauge-item__description">
+                Status: <strong class="gauge-item__status--75">Lorem Ipsum dolor</strong>
+              </p>
+            </li>
+
+          </ul>
+
+        </section>
+
         <aside class="page__sidebar">
 
-          <div class="gauge">
-            <div class="gauge__meter gauge__meter--5"></div>
-          </div>
+          <div class="gauge-item">
+            <div class="gauge-item__thumbnail">
+              <div class="gauge">
+                <div class="gauge__meter gauge__meter--15"></div>
+              </div>
+            </div>
 
-          <div class="gauge">
-            <div class="gauge__meter gauge__meter--15"></div>
-          </div>
-
-          <div class="gauge">
-            <div class="gauge__meter gauge__meter--30"></div>
-          </div>
-
-          <div class="gauge">
-            <div class="gauge__meter gauge__meter--60"></div>
-          </div>
-
-          <div class="gauge">
-            <div class="gauge__meter gauge__meter--75"></div>
+            <h3 class="gauge-item__title">Lorem Ipsum dolor sit amet</h3>
+            <p class="gauge-item__description">
+              Status: <strong class="gauge-item__status--15">Lorem Ipsum dolor</strong></p>
           </div>
 
         </aside>
-
-        <section class="page__section">
-
-        </section>
 
       </div>
     </div>
