--- a/example/index.html
+++ b/example/index.html
@@ -96,121 +96,141 @@
           <h3>Alle Themen</h3>
 
           <ul class="gauge-list">
-
             <li class="gauge-item">
-              <div class="gauge-item__thumbnail--inline">
-                <div class="gauge">
-                  <div class="gauge__meter gauge__meter--5"></div>
+              <a href="https://correctiv.org/recherchen/ttip/verhandlungsbarometer/" class="gauge-item__link">
+                <div class="gauge-item__thumbnail--inline">
+                  <div class="gauge">
+                    <div class="gauge__meter gauge__meter--15"></div>
+                  </div>
                 </div>
-              </div>
 
-              <div class="gauge-item__content--inline">
-                <h3 class="gauge-item__title">Schiedsgerichte</h3>
-                <p class="gauge-item__description">
-                  Status:
-                  <strong class="gauge-item__status">Bisher wird nur geredet</strong>
-                </p>
-              </div>
+                <div class="gauge-item__content--inline">
+                  <h3 class="gauge-item__title">Dienstleistungen</h3>
+                  <p class="gauge-item__description">
+                    Status: <strong class="gauge-item__status--15">Keine Einigung in Sicht</strong>
+                  </p>
+                </div>
+              </a>
             </li>
 
             <li class="gauge-item">
-              <div class="gauge-item__thumbnail--inline">
-                <div class="gauge">
-                  <div class="gauge__meter gauge__meter--15"></div>
+              <a href="https://correctiv.org/recherchen/ttip/verhandlungsbarometer/" class="gauge-item__link">
+                <div class="gauge-item__thumbnail--inline">
+                  <div class="gauge">
+                    <div class="gauge__meter gauge__meter--15"></div>
+                  </div>
                 </div>
-              </div>
 
-              <div class="gauge-item__content--inline">
-              <h3 class="gauge-item__title">Dienstleistungen</h3>
-              <p class="gauge-item__description">
-                Status: <strong class="gauge-item__status--15">Keine Einigung in Sicht</strong>
-              </p>
+                <div class="gauge-item__content--inline">
+                  <h3 class="gauge-item__title">Dienstleistungen</h3>
+                  <p class="gauge-item__description">
+                    Status: <strong class="gauge-item__status--15">Keine Einigung in Sicht</strong>
+                  </p>
+                </div>
+              </a>
             </li>
 
             <li class="gauge-item">
-              <div class="gauge-item__thumbnail--inline">
-                <div class="gauge">
-                  <div class="gauge__meter gauge__meter--15"></div>
+              <a href="https://correctiv.org/recherchen/ttip/verhandlungsbarometer/" class="gauge-item__link">
+                <div class="gauge-item__thumbnail--inline">
+                  <div class="gauge">
+                    <div class="gauge__meter gauge__meter--15"></div>
+                  </div>
                 </div>
-              </div>
 
-              <div class="gauge-item__content--inline">
-              <h3 class="gauge-item__title">Warenhandel und Zölle</h3>
-              <p class="gauge-item__description">
-                Status: <strong class="gauge-item__status--15">Keine Einigung in Sicht</strong>
-              </p>
+                <div class="gauge-item__content--inline">
+                  <h3 class="gauge-item__title">Warenhandel und Zölle</h3>
+                  <p class="gauge-item__description">
+                    Status: <strong class="gauge-item__status--15">Keine Einigung in Sicht</strong>
+                  </p>
+                </div>
+              </a>
             </li>
 
             <li class="gauge-item">
-              <div class="gauge-item__thumbnail--inline">
-                <div class="gauge">
-                  <div class="gauge__meter gauge__meter--15"></div>
+              <a href="https://correctiv.org/recherchen/ttip/verhandlungsbarometer/" class="gauge-item__link">
+                <div class="gauge-item__thumbnail--inline">
+                  <div class="gauge">
+                    <div class="gauge__meter gauge__meter--15"></div>
+                  </div>
                 </div>
-              </div>
 
-              <div class="gauge-item__content--inline">
-              <h3 class="gauge-item__title">Öffentliche Beschaffung</h3>
-              <p class="gauge-item__description">
-                Status: <strong class="gauge-item__status--15">Keine Einigung in Sicht</strong>
-              </p>
+                <div class="gauge-item__content--inline">
+                  <h3 class="gauge-item__title">Öffentliche Beschaffung</h3>
+                  <p class="gauge-item__description">
+                    Status: <strong class="gauge-item__status--15">Keine Einigung in Sicht</strong>
+                  </p>
+                </div>
+              </a>
             </li>
 
             <li class="gauge-item">
-              <div class="gauge-item__thumbnail--inline">
-                <div class="gauge">
-                  <div class="gauge__meter gauge__meter--15"></div>
+              <a href="https://correctiv.org/recherchen/ttip/verhandlungsbarometer/" class="gauge-item__link">
+                <div class="gauge-item__thumbnail--inline">
+                  <div class="gauge">
+                    <div class="gauge__meter gauge__meter--15"></div>
+                  </div>
                 </div>
-              </div>
 
-              <div class="gauge-item__content--inline">
-              <h3 class="gauge-item__title">Ursprungsregeln</h3>
-              <p class="gauge-item__description">
-                Status: <strong class="gauge-item__status--15">Keine Einigung in Sicht</strong>
-              </p>
+                <div class="gauge-item__content--inline">
+                  <h3 class="gauge-item__title">Ursprungsregeln</h3>
+                  <p class="gauge-item__description">
+                    Status: <strong class="gauge-item__status--15">Keine Einigung in Sicht</strong>
+                  </p>
+                </div>
+              </a>
             </li>
 
             <li class="gauge-item">
-              <div class="gauge-item__thumbnail--inline">
-                <div class="gauge">
-                  <div class="gauge__meter gauge__meter--30"></div>
+              <a href="https://correctiv.org/recherchen/ttip/verhandlungsbarometer/" class="gauge-item__link">
+                <div class="gauge-item__thumbnail--inline">
+                  <div class="gauge">
+                    <div class="gauge__meter gauge__meter--30"></div>
+                  </div>
                 </div>
-              </div>
 
-              <div class="gauge-item__content--inline">
-              <h3 class="gauge-item__title">Technische Handelshemmnisse</h3>
-              <p class="gauge-item__description">
-                Status:
-                <strong class="gauge-item__status--30">Es ist kompliziert, aber der Wille zur Einigung ist da</strong>
-              </p>
+                <div class="gauge-item__content--inline">
+                  <h3 class="gauge-item__title">Technische Handelshemmnisse</h3>
+                  <p class="gauge-item__description">
+                    Status:
+                    <strong class="gauge-item__status--30">Es ist kompliziert, aber der Wille zur Einigung ist da</strong>
+                  </p>
+                </div>
+              </a>
             </li>
 
             <li class="gauge-item">
-              <div class="gauge-item__thumbnail--inline">
-                <div class="gauge">
-                  <div class="gauge__meter gauge__meter--60"></div>
+              <a href="https://correctiv.org/recherchen/ttip/verhandlungsbarometer/" class="gauge-item__link">
+                <div class="gauge-item__thumbnail--inline">
+                  <div class="gauge">
+                    <div class="gauge__meter gauge__meter--60"></div>
+                  </div>
                 </div>
-              </div>
 
-              <div class="gauge-item__content--inline">
-              <h3 class="gauge-item__title">Lebensmittelsicherheit</h3>
-              <p class="gauge-item__description">
-                Status: <strong class="gauge-item__status--60">Es gibt erste Textentwürfe</strong>
-              </p>
+                <div class="gauge-item__content--inline">
+                  <h3 class="gauge-item__title">Lebensmittelsicherheit</h3>
+                  <p class="gauge-item__description">
+                    Status: <strong class="gauge-item__status--60">Es gibt erste Textentwürfe</strong>
+                  </p>
+                </div>
+              </a>
             </li>
 
             <li class="gauge-item">
-              <div class="gauge-item__thumbnail--inline">
-                <div class="gauge">
-                  <div class="gauge__meter gauge__meter--75"></div>
+              <a href="https://correctiv.org/recherchen/ttip/verhandlungsbarometer/" class="gauge-item__link">
+                <div class="gauge-item__thumbnail--inline">
+                  <div class="gauge">
+                    <div class="gauge__meter gauge__meter--75"></div>
+                  </div>
                 </div>
-              </div>
 
-              <div class="gauge-item__content--inline">
-              <h3 class="gauge-item__title">Regulierungsfragen</h3>
-              <p class="gauge-item__description">
-                Status: <strong class="gauge-item__status--75">sind fast durch</strong>
-              </p>
-              </div>
+                <div class="gauge-item__content--inline">
+                  <h3 class="gauge-item__title">Regulierungsfragen</h3>
+                  <p class="gauge-item__description">
+                    Status: <strong class="gauge-item__status--75">sind fast durch</strong>
+                  </p>
+                </div>
+              </a>
             </li>
 
             <li class="gauge-item--disabled">
